sfdx-source/force-app/main/default/objects/Stakeholder__c/Stakeholder__c.object-meta.xml
<CustomObject>
    <description>LEM-601: This custom object is used to capture the Initiative participants who have been involved in a relationship between DoorDash and the Mx.</description>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>STK-{0}</displayFormat>
        <label>Stakeholder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>