sfdx-source/force-app/main/default/objects/Stakeholder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-601: This field is to define the relationship between Contact and StakeHolder Object.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stakeholders</relationshipLabel>
    <relationshipName>Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>