sfdx-source/force-app/main/default/objects/Stakeholder__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-601, LEM-14667: This field indicates the relationship between Initiative and Stakeholder object. Updated label to Mx Touchpoint.</description>
    <label>Mx Touchpoint</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>Stakeholders</relationshipLabel>
    <relationshipName>Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>