sfdx-source/force-app/main/default/objects/Stakeholder__c/fields/Stakeholder_Account__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Account__c</fullName>
    <description>LEM-601: This field is to display the primary account name of the related Contact if the Contact relationship exists.</description>
    <formula>IF(Contact__c != null, Contact__r.Account.Name, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stakeholder Account</label>
    <type>Text</type>
</CustomField>