sfdx-source/force-app/main/default/objects/Stakeholder__c/fields/Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-601: Displays hyperlink to associated Contact or User record.</description>
    <formula>IF(
      NOT(ISBLANK(Contact__c))&amp;&amp;
      NOT(ISBLANK(User__c)),
      HYPERLINK(&quot;/&quot; &amp; Contact__c, Contact__r.FirstName + &quot; &quot; + Contact__r.LastName, &quot;_self&quot;),
      IF(
        NOT(ISBLANK(Contact__c))&amp;&amp;
        (ISBLANK(User__c)),
        HYPERLINK(&quot;/&quot; &amp; Contact__c, Contact__r.FirstName + &quot; &quot;  + Contact__r.LastName, &quot;_self&quot;),
        IF(
          (ISBLANK(Contact__c))&amp;&amp;
          NOT(ISBLANK(User__c)),
          HYPERLINK( &quot;/&quot; &amp; User__c, User__r.FirstName  + &quot; &quot;  + User__r.LastName, &quot;_self&quot;),
          IF(
            (ISBLANK(Contact__c))&amp;&amp;
            (ISBLANK(User__c)),
            &apos;&apos;,
            &apos;&apos;
          )
        )
      )
    )</formula>
    <label>Stakeholder Name</label>
    <type>Text</type>
</CustomField>