sfdx-source/force-app/main/default/objects/Stakeholder__c/fields/Stakeholder_Type__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Type__c</fullName>
    <description>LEM-601: Formula field to display whether record is for Internal or External</description>
    <formula>IF(ISBLANK(Contact__c) , &apos;Internal DoorDash Participant&apos;, &apos;External Participant&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Determine if record is an Internal DoorDash Participant or an External Participant</inlineHelpText>
    <label>Stakeholder Type</label>
    <type>Text</type>
</CustomField>