sfdx-source/force-app/main/default/objects/Stakeholder__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-601: Relationship to User on Stake Holder record</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>